[package]
name = "steam-discount-checker"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "steamdc"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.131", features = ["derive"] }
prettytable-rs = "0.8.0"
dirs-next = "2.0.0"
